--- a/estiloscss/talleres.css
+++ b/estiloscss/talleres.css
@@ -128,7 +128,7 @@ footer .pie-pagina{
 }
 
 .pie-pagina .grupo-1 ul a:hover{
-    color: lightpink;
+    color: #c72828;
 }
 
 .pie-pagina .grupo-1 ul a{
@@ -146,10 +146,10 @@ footer .pie-pagina{
     text-align: center;
 }
 .pie-pagina .grupo-1 .links a:hover{
-    color: lightpink;
+    color: #c72828;
 }    
 .pie-pagina .grupo-1 .red-social img:hover{
-    color: lightpink;
+    color: #c72828;
 }
 
 .pie-pagina .grupo-1 .links li a{ /*links de la columna LINKS*/
@@ -160,7 +160,7 @@ footer .pie-pagina{
 }
 
 .pie-pagina .grupo-2{ /*copyright*/
-    background-color: rgb(34, 4, 48);
+    background-color: rgb(0, 0, 51);
     padding: 15px 10px;
     text-align: center;
     color: white;
