--- a/estiloscss/cursos.css
+++ b/estiloscss/cursos.css
@@ -175,7 +175,7 @@ header{
     }
     
     .pie-pagina .grupo-1 ul a:hover{
-        color: lightpink;
+        color: #c72828;
     }
     
     .pie-pagina .grupo-1 ul a{
@@ -193,10 +193,10 @@ header{
         text-align: center;
     }
     .pie-pagina .grupo-1 .links a:hover{
-        color: lightpink;
+        color: #c72828;
     }    
     .pie-pagina .grupo-1 .red-social img:hover{
-        color: lightpink;
+        color: #c72828;
     }
     
     .pie-pagina .grupo-1 .links li a{ /*links de la columna LINKS*/
@@ -207,7 +207,7 @@ header{
     }
     
     .pie-pagina .grupo-2{ /*copyright*/
-        background-color: rgb(34, 4, 48);
+        background-color: rgb(0, 0, 51);
         padding: 15px 10px;
         text-align: center;
         color: white;
