--- a/estiloscss/preguntas.css
+++ b/estiloscss/preguntas.css
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(167, 206, 243, 0.2);
+    background: rgba(169, 219, 248, 0.2);
     padding: 20px 20px 20px 80px;
     transition: .4s;
     font-size: 20px;
@@ -154,7 +154,7 @@ footer .pie-pagina{
 }
 
 .pie-pagina .grupo-1 ul a:hover{
-    color: lightpink;
+    color: #c72828;
 }
 
 .pie-pagina .grupo-1 ul a{
@@ -172,10 +172,10 @@ footer .pie-pagina{
     text-align: center;
 }
 .pie-pagina .grupo-1 .links a:hover{
-    color: lightpink;
+    color: #c72828;
 }    
 .pie-pagina .grupo-1 .red-social img:hover{
-    color: lightpink;
+    color: #c72828;
 }
 
 .pie-pagina .grupo-1 .links li a{ /*links de la columna LINKS*/
@@ -186,7 +186,7 @@ footer .pie-pagina{
 }
 
 .pie-pagina .grupo-2{ /*copyright*/
-    background-color: rgb(34, 4, 48);
+    background-color: rgb(0, 0, 51);
     padding: 15px 10px;
     text-align: center;
     color: white;
